Make project Java 11 compatible for Jenkins